--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 .logo-img{
     margin-left: 30px;
     margin-right: 15px;
@@ -58,33 +61,151 @@
     background-color: black !important;
     padding-left: 30px;
     padding-right: 100px;
+    height: 80px;
 }
 .navbar-links>ul>li{
     margin-left: 50px;
 }
 .btn-login{
     background-color: #FF45B5 !important;
-    width: 150px;
+    width: 130px;
+    height: 35px;
     border-radius: 7px;
     color: white;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.profile-logo-header{
+    margin-top: 21px;
+    display: flex;
+    color: white;
+}
+.image-profile{
+    margin-right: 10px;
+}
+.image-profile>img{
+    width: 30px;
+    height: auto;
+}
+.user-name{
+    margin-top: 3px;
+}
+.link-navbar{
+    text-decoration: none;
+}
+.notification-logo{
+    margin-top: 5px;
+    margin-right: 10px;
+}
+/* HOMEPAGE */
+.custom-size-carousel{
+    padding: 70px;
+}
+.category-box{
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 15px;
+}
+.category-bar{
+    background-color: black;
+    height: 70px;
+    font-size: 16px;
+    margin-bottom: 40px;
+}
+.category-sentence{
+    justify-content: space-around;
+}
+.custom-color-active{
+    background-color: #FF45B5 !important;
+}
+.category-sentence>li>a{
+    color: white !important;
+}
+    /* Calendar */
+.calendar {
+    margin-bottom: 20px;
+    display:inline-grid;
+    justify-content:center;
+    align-items:center;
+    background:#ffffff;
+    padding:20px;
+    border-radius:7px;
+    box-shadow: 0px 0px 7px rgba(0,0,0,0.3);
+}
+.calendar .month {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+    font-weight: 300;
+}
+.calendar .month .year {
+    font-weight: 600;
+    margin-left: 10px;
+}
+.calendar .month .nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #FF45B5;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    transition-duration: 0.2s;
+    position: relative;
+}
+.calendar .month .nav:hover {
+    background: #eee;
+}
+.calendar .days {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: repeat(7, 1fr);
+    color: #999;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.calendar .days span {
+    width: 50px;
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+}
+.calendar .dates {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+}
+.calendar .dates button {
+    cursor: pointer;
+    outline: 0;
+    border: 0;
+    background: transparent;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    justify-self: center;
+    align-self: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    margin: 2px;
+    transition-duration: 0.2s;
+}
+.calendar .dates button.today {
+    box-shadow: inset 0px 0px 0px 2px #FF45B5;
+}
+.calendar .dates button:first-child {
+    grid-column: 3;
+}
+.calendar .dates button:hover {
+     background: #eee;
+}
+.calendar .dates button:focus {
+    background: #FF45B5;
+    color: #fff;
+    font-weight: 600;
+}
+    /* GRID */
+.custom-col1{
+    margin-left: -63px;
+}
