--- a/public/css/style.css
+++ b/public/css/style.css
@@ -209,3 +209,144 @@
 .custom-col1{
     margin-left: -63px;
 }
+.custom-col2{
+    /* background-color: antiquewhite; */
+    margin-left: 120px;
+    width: max-content;
+    margin-right: 0px;
+}
+.custom-col3{
+    margin-top: 10px;
+    margin-left: -65px;
+}
+
+    /* SEARCH BAR */
+.main {
+    width: 900px;
+    margin-bottom: 30px;
+  }
+.has-search .form-control {
+    padding-left: 40px;
+}
+.has-search .form-control-feedback {
+    position: relative;
+    z-index: 2;
+    width: 38px;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    pointer-events: none;
+    color: #000000;
+}
+.search-logo{
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+    /* FILTER BOX */
+.filter-box{
+    background-color: white;
+    border-radius:7px;
+    box-shadow: 0px 0px 7px rgba(0,0,0,0.3);
+    padding: 35px;
+    width: 420px;
+    margin-bottom: 20px;
+    color: black !important;
+    /* position: fixed; */
+}
+.filter-content>h3{
+    margin-bottom: 20px;
+}
+        /* PRICE RANGE */
+        .price-range{
+            margin-bottom: 20px;
+        }
+        .slider-box {
+            width: 30%;
+            margin: 25px auto;
+        }
+
+        label,
+        input {
+            border: none;
+            display: inline-block;
+            vertical-align: top;
+            width: 30%;
+        }
+
+        input {
+            width: 70%;
+        }
+
+        .slider {
+            margin: 25px 0;
+            height: 14px;
+            border: 0;
+            background: #66c5c8;
+            border-radius: 14px;
+        }
+        .ui-slider-horizontal .ui-slider-handle {
+            width: 34px;
+            height: 34px;
+            left: -17px;
+            top: -10px;
+            -webkit-border-radius: 34px;
+            border-radius: 34px;
+            background: #000000 !important;
+            cursor: default;
+            -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.15);
+            box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.15);
+            cursor: col-resize;
+        }
+        .ui-slider-horizontal .ui-slider-range {
+            background: #000000;
+            border-radius: 14px;
+        }
+
+        span.ui-slider-handle.ui-state-default.ui-corner-all:before,
+        span.ui-slider-handle.ui-state-default.ui-corner-all:after {
+            content: "";
+            display: block;
+            position: absolute;
+            height: 12px;
+            width: 1px;
+            background: #000000;
+            left: 15px;
+            top: 11px;
+        }
+        span.ui-slider-handle.ui-state-default.ui-corner-all:after {
+            left: 18px;
+        }
+
+          /* LOCATION */
+        .radio-btn-custom{
+            margin-top: 10px;
+        }
+        .type-filter>h5{
+            margin-top: 20px;
+        }
+.btn-custom{
+    margin-top: 30px;
+    background-color: #FF45B5 !important;
+    width: 200px;
+    height: 40px;
+    border-radius: 7px;
+    color: white;
+    margin-left: 65px;
+}
+
+/* ALL CONCERT */
+.cards{
+    margin-bottom: 20px !important;
+}
+.cards-container{
+    width: 900px;
+    height: 200px;
+}
+.images-cards>img{
+    width: 80px !important;
+    height: auto !important;
+}
+
+
+
