--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,7 +252,6 @@
     width: 420px;
     margin-bottom: 20px;
     color: black !important;
-    /* position: fixed; */
 }
 .filter-content>h3{
     margin-bottom: 20px;
@@ -339,9 +338,11 @@
 .cards{
     margin-bottom: 20px !important;
     width: 900px !important;
-    height: 200px;
+    height: 240px;
     box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
-    position: relative;
+}
+.image-cards{
+    margin-top: 20px;
 }
 .image-cards>img{
     padding: 20px;
@@ -359,7 +360,6 @@
 }
 .information-concert{
     background-color: #000000;
-    position: absolute;
     width: 170px;
     height: 110px;
     color: white;
@@ -384,12 +384,28 @@
     font-size: 13px;
 }
 .btn-book{
-    position: absolute;
     margin-left: 400px !important;
     margin-top: 40px;
 }
-
-
-
-
-
+.btn-booked{
+    margin-top: 175px;
+    background-color: #FF45B5 !important;
+    width: 200px;
+    height: 40px;
+    border-radius: 7px;
+    color: white;
+    margin-left: 310px;
+}
+.test{
+    background-color: wheat;
+    height: 60px;
+    margin-bottom: 30px;
+    width: 100px;
+}
+.test2{
+    height: 40px;
+    margin-top: 30px;
+    background-color: #ff0000;
+    width: 100px;
+    z-index: 1;
+}
