--- a/public/css/style.css
+++ b/public/css/style.css
@@ -411,3 +411,25 @@
     margin-left: 980px;
     margin-top: -95px;
 }
+
+/* TICKET PAGE */
+.cards-ticket{
+    background-color: white;
+    box-shadow: 0px 0px 3px black;
+    border-radius: 7px 7px 25px 25px;
+    width: 400px;
+    height: 500px;
+}
+.information-ticket{
+    background-color: white;
+    box-shadow: 0px 0px 3px black;
+    border-radius: 15px 15px 7px 7px;
+    width: 400px;
+    height: 200px;
+}
+.image-download>img{
+    width: 22px;
+    height: 20px;
+}
+
+
