update ticket dkk

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -371,8 +371,8 @@
     display: flex;
 }
 .price-list-text>p{
-    width: 190px;
-    background-color: wheat;
+    width: 250px;
+    /* background-color: wheat; */
     font-family: 50px;
 }
 .seatplan-img>img{
@@ -589,23 +589,12 @@
     font-size: 14px;
 }
 /* TICKET PAGE */
-.cards-ticket{
-    background-color: white;
-    box-shadow: 0px 0px 3px black;
-    border-radius: 7px 7px 25px 25px;
-    width: 400px;
-    height: 500px;
-}
-.information-ticket{
-    background-color: white;
-    box-shadow: 0px 0px 3px black;
-    border-radius: 15px 15px 7px 7px;
-    width: 400px;
-    height: 200px;
-}
 .image-download>img{
     width: 22px;
     height: 20px;
 }
-
+.barcode-img>img{
+    width: 300px;
+    height: auto;
+}
 
