--- a/public/css/style.css
+++ b/public/css/style.css
@@ -352,15 +352,14 @@
     margin-left: 30px;
 }
 .poster>img{
-    width: 700px;
+    width: 650px;
     height: auto;
     border-radius: 10px;
+    margin-right: 40px;
+    margin-top: 20px;
 }
-.description-concert{
-    margin-top: 220px;
-    width: 700px;
-    margin-left: -310px;
-    text-align: justify;
+.concert-desc{
+    margin-top: 150px;
 }
 .information-content{
     justify-content: space-between;
@@ -379,7 +378,7 @@
     width: 550px;
     height: auto;
     border-radius: 7px;
-    margin-left: 680px;
+    margin-left: 600px;
 }
 
 /* BOOKING DETAIL */
