--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,6 +243,10 @@
     margin-left: 10px;
     margin-top: 5px;
 }
+.btn-search{
+     position: absolute;
+     margin-left: 828px;
+}
     /* FILTER BOX */
 .filter-box{
     background-color: white;
@@ -276,7 +280,7 @@
 
 /* ALL CONCERT */
 .cards{
-    margin-bottom: 20px !important;
+    margin-top: 20px !important;
     width: 900px !important;
     height: 240px;
     box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
