--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 .logo-img{
     margin-left: 30px;
     margin-right: 15px;
@@ -58,33 +61,543 @@
     background-color: black !important;
     padding-left: 30px;
     padding-right: 100px;
+    height: 80px;
 }
 .navbar-links>ul>li{
     margin-left: 50px;
 }
 .btn-login{
     background-color: #FF45B5 !important;
-    width: 150px;
+    width: 130px;
+    height: 35px;
     border-radius: 7px;
     color: white;
 }
+.profile-logo-header{
+    margin-top: 21px;
+    display: flex;
+    color: white;
+}
+.image-profile{
+    margin-right: 10px;
+}
+.image-profile>img{
+    width: 30px;
+    height: auto;
+}
+.user-name{
+    margin-top: 3px;
+}
+.link-navbar{
+    text-decoration: none;
+}
+.notification-logo{
+    margin-top: 5px;
+    margin-right: 10px;
+}
+/* HOMEPAGE */
+.custom-size-carousel{
+    padding: 70px;
+}
+.category-box{
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 15px;
+}
+.category-bar{
+    background-color: black;
+    height: 70px;
+    font-size: 16px;
+    margin-bottom: 40px;
+}
+.category-sentence{
+    justify-content: space-around;
+}
+.custom-color-active{
+    background-color: #FF45B5 !important;
+}
+.category-sentence>li>a{
+    color: white !important;
+}
+    /* Calendar */
+.calendar {
+    margin-bottom: 20px;
+    display:inline-grid;
+    justify-content:center;
+    align-items:center;
+    background:#ffffff;
+    padding:20px;
+    border-radius:7px;
+    box-shadow: 0px 0px 7px rgba(0,0,0,0.3);
+}
+.calendar .month {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+    font-weight: 300;
+}
+.calendar .month .year {
+    font-weight: 600;
+    margin-left: 10px;
+}
+.calendar .month .nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #FF45B5;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    transition-duration: 0.2s;
+    position: relative;
+}
+.calendar .month .nav:hover {
+    background: #eee;
+}
+.calendar .days {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: repeat(7, 1fr);
+    color: #999;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.calendar .days span {
+    width: 50px;
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+}
+.calendar .dates {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+}
+.calendar .dates button {
+    cursor: pointer;
+    outline: 0;
+    border: 0;
+    background: transparent;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    justify-self: center;
+    align-self: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    margin: 2px;
+    transition-duration: 0.2s;
+}
+.calendar .dates button.today {
+    box-shadow: inset 0px 0px 0px 2px #FF45B5;
+}
+.calendar .dates button:first-child {
+    grid-column: 3;
+}
+.calendar .dates button:hover {
+     background: #eee;
+}
+.calendar .dates button:focus {
+    background: #FF45B5;
+    color: #fff;
+    font-weight: 600;
+}
+    /* GRID */
+.custom-col1{
+    margin-left: -63px;
+}
+.custom-col2{
+    /* background-color: antiquewhite; */
+    margin-left: 120px;
+    width: max-content;
+    margin-right: 0px;
+}
+.custom-col3{
+    margin-top: 10px;
+    margin-left: -65px;
+}
 
+    /* SEARCH BAR */
+.main {
+    width: 900px;
+    margin-bottom: 30px;
+  }
+.has-search .form-control {
+    padding-left: 40px;
+}
+.has-search .form-control-feedback {
+    position: relative;
+    z-index: 2;
+    width: 38px;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    pointer-events: none;
+    color: #000000;
+}
+.search-logo{
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+.btn-search{
+     position: absolute;
+     margin-left: 828px;
+}
+    /* FILTER BOX */
+.filter-box{
+    background-color: white;
+    border-radius:7px;
+    box-shadow: 0px 0px 7px rgba(0,0,0,0.3);
+    padding: 35px;
+    width: 420px;
+    margin-bottom: 20px;
+    color: black !important;
+}
+.filter-content>h3{
+    margin-bottom: 20px;
+}
+        /* PRICE RANGE */
+        .price-range{
+            margin-bottom: 20px;
+        }
+        #custom-color{
+            color: #000000 !important;
+            background-color: #000000 !important;
+        }
+.btn-custom{
+    margin-top: 30px;
+    background-color: #FF45B5 !important;
+    width: 200px;
+    height: 40px;
+    border-radius: 7px;
+    color: white;
+    margin-left: 65px;
+}
 
+/* ALL CONCERT */
+.cards{
+    margin-top: 20px !important;
+    width: 900px !important;
+    height: 240px;
+    box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+}
+.image-cards{
+    margin-top: 20px;
+}
+.image-cards>img{
+    padding: 20px;
+    border-radius: 30px !important;
+    width: 300px !important;
+    height: auto !important;
+}
+.cards-content{
+    padding-top: 25px;
+    margin-top: 15px;
+    width: 410px;
+}
+.cards-content>p{
+    font-size: 12px;
+    width: 370px;
+    text-align: justify;
+}
+.information-concert{
+    background-color: #000000;
+    width: 150px;
+    height: 130px;
+    color: white;
+    margin-left: 710px;
+    margin-top: 45px;
+    border-radius: 7px;
+    padding: 15px;
+}
+.info-content{
+    display: flex;
+}
+.info-content>h2{
+    font-size: 35px;
+}
+.info-content>p{
+    margin-top: 4px;
+    margin-left: 5px;
+    font-size: 12px;
+}
+.location>p{
+    margin-top: -10px;
+    font-size: 13px;
+}
+.btn-book{
+    margin-left: 400px !important;
+    margin-top: 40px;
+}
+.btn-booked{
+    margin-top: 175px;
+    background-color: #FF45B5 !important;
+    width: 200px;
+    height: 40px;
+    border-radius: 7px;
+    color: white;
+    margin-left: 310px;
+}
 
+/* BOOKING-PAGE */
+.btn-booked2{
+    background-color: #FF45B5 !important;
+    width: 200px;
+    height: 40px;
+    border-radius: 7px;
+    color: white;
+}
+.content-book{
+    padding: 40px;
+    margin-left: 30px;
+}
+.poster>img{
+    width: 650px;
+    height: auto;
+    border-radius: 10px;
+    margin-right: 40px;
+    margin-top: 20px;
+}
+.concert-desc{
+    margin-top: 60px;
+}
+.information-content{
+    justify-content: space-between;
+    margin-right: 250px;
+}
+.price-list-content{
+    margin-top: 20px;
+    display: flex;
+}
+.price-list-text>p{
+    width: 250px;
+    /* background-color: wheat; */
+    font-family: 50px;
+}
+.seatplan-img>img{
+    width: 550px;
+    height: auto;
+    border-radius: 7px;
+    margin-left: 600px;
+}
 
+/* BOOKING DETAIL */
+.terms>li{
+    color: grey !important;
+    margin-bottom: 10px;
+    text-align: justify;
+}
+.status-seat{
+    border-color: #FF6FC5;
+    width: 100px;
+    border-style: solid;
+    border-radius: 7px;
+    margin-top: 20px;
+    width: 150px;
+    height: 40px;
+}
+.status-seat>p{
+    margin-top: 5px;
+    margin-left: 38px;
+    color: #FF45B5;
+}
+.btn-seat{
+    background-color: #FF45B5 !important;
+    width: 200px;
+    height: 40px;
+    border-radius: 7px;
+    color: white;
+    margin-left: 980px;
+    margin-top: -95px;
+}
 
+/* LOGIN & SIGNUP */
+#form-login{
+    background-color: rgb(222, 222, 222);
+    border-top-color: rgb(185, 185, 185);
+    border-top-width: 3.5px;
+    border-bottom-style: none;
+    border-left-style: none;
+    border-right-style: none;
+}
 
+.login-btn{
+    background-color: rgb(249, 154, 201);
+    color: white;
+    border-radius: 50px;
+    border-top-color: rgb(225, 111, 198);
+    border-top-width: 3.5px;
+    border-bottom-style: none;
+    border-left-style: none;
+    border-right-style: none;
+    padding: 10px;
+    text-align: center;
+    font-size: 12px;
+    width: 255px;
+}
 
+.login-icon-img{
+    width: 1px;
+    height: auto;
+}
 
+#bg-login{
+    background-image: linear-gradient(black, black, rgb(225, 111, 198));
+}
 
+/* PROFILE */
+.notif{
+    padding-right: 10px;
+    width: 90%;
+}
+.nicholas{
+    padding-top: 5px;
+    padding-left: 10px;
+    width: 10%;
+}
 
+.soob-img{
+    width: 1px;
+    height: auto;
+    margin-left: 75px;
+}
 
+.edit-btn{
+    background-color: #fe75c7;
+    width: 120px;
+    height: 37px;
+    border-radius: 5px;
+    border-width: 0px;
+    color: white;
+}
 
+.profile-text1{
+    font-size: 18px;
+    text-align:left;
+    color:#7b7b7b;
+    line-height: 60%;
+}
 
+.profile-text2{
+    font-size: 18px;
+    text-align:left;
+    color:black;
+    line-height: 60%;
+}
 
+.dropdown-arrow-profile{
+    width: 2%;
+    display: inline-block;
+    margin-top: -10px;
+    margin-left: 875px;
+}
 
+.about-us-line{
+    border-top: 0.5px solid #979797;
+    width: 85%;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+}
 
+/* PROFILE */
+.purchase-line-1{
+    border-top: 0.5px solid #979797;
+    width: 85%;
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+}
 
+.bornpink-img{
+    width: 10%;
+}
 
+.dropdown-arrow-purchase{
+    width: 3%;
+    display: inline-block;
+    margin-top: -4px;
+    margin-left: 290px;
+}
 
+.payment-details-line{
+    border-top: 0.5px solid #979797;
+    width: 91%;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+#form-purchase{
+    border-color: black;
+    border-width: 1px;
+    width: 70%;
+    margin-bottom: 5px;
+}
+
+.payment-method-logo{
+    width: 100px;
+    position: absolute;
+}
+
+#result{
+    border-width: 0px;
+    display: inline-block;
+    font-size: 14px;
+    margin-left: 105px;
+    text-align: right;
+    height: 14px;
+}
+
+#admin{
+    border-width: 0px;
+    display: inline-block;
+    font-size: 12px;
+    margin-left: 167px;
+    text-align: right;
+    height: 12px;
+}
+
+.purchase-line-2{
+    border-top: 0.5px solid #979797;
+    width: 92%;
+    margin-bottom: 20px;
+}
+
+#total{
+    border-width: 0px;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 77px;
+    text-align: right;
+    height: 16px;
+}
+
+.purchase-btn{
+    border-radius: 5px;
+    background-color: white;
+    border-color: #fe75c7;
+    border-width: 0.5px;
+    color: #fe75c7;
+    box-shadow: 0 1px 2px 0 #979797;
+    width: 170px;
+    height: 35px;
+    margin-left: 91px;
+    margin-top: 20px;
+    font-size: 14px;
+}
+/* TICKET PAGE */
+.image-download>img{
+    width: 22px;
+    height: 20px;
+}
+.barcode-img>img{
+    width: 300px;
+    height: auto;
+}
 
